--- a/La_vida.html
+++ b/La_vida.html
@@ -7,6 +7,6 @@
 
     <body>
         <h1>HolaMacaco</h1>
-        <p>Cómo estas linda mía 😀</p>
+        <p>Cómo estas linda mía. 😀</p>
     </body>
 </html>
